--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@ a, a:active, a:hover, a:focus, a:visited{
     <h2 class="title">最新地址</h2>
     <h4 class="title">为避免走失，Ctrl+D 即可收藏地址！</h4>
 
-    <ul>
-        <li><a href="https://94erssdczcx.hanime546675o.click/">https://94erssdczcx.hanime546675o.click/</a></li>
-        <li><a href="https://ipljj67565463r.hanime9876t.lol/">https://ipljj67565463r.hanime9876t.lol/</a></li> 
+      <ul>
+        <li><a href="https://n1927yutghds.hanimeiolki98.lol/">https://n1927yutghds.hanimeiolki98.lol/</a></li>
+        <li><a href="https://xcvmbneqw5.hanimeokijsh787.click/">https://xcvmbneqw5.hanimeokijsh787.click/</a></li>
    </ul>
 </div>
     
